overflow-fixed

--- a/css/index.scss
+++ b/css/index.scss
@@ -32,7 +32,7 @@
     transform: translate(-50%,-50%);
     background-image: url('../assets/loader.gif');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center center;
     background-size: cover;
     margin: -20px 0 0 -20px;
   }
@@ -59,6 +59,7 @@ html{
 body{
     height: max-content;
     background-color: #0b0301;
+    overflow-x: hidden;
 }
 main{
     scroll-behavior:smooth;
